Linked contact_us page to index page for el-GR language; changed text at contact us page; removed obsolete links; added up-to-date links.

--- a/el-GR/home.html
+++ b/el-GR/home.html
@@ -52,7 +52,7 @@
                                 <li><a href = "#"> Μαθήματα από Απόσταση</a></li>
                                 <li><a href = "#"> Εφαρμογές Google</a></li>
                                 <li><a href = "#"> Moodle</a></li>
-                                <li><a href = "#"> Επικοινωνήστε Μαζί μας</a></li>
+                                <li><a href = "contact_us.html"> Επικοινωνήστε Μαζί μας</a></li>
                             
                             </ul>
                     
