privacy policy pages created for both en-GB and el-GR sites; links created on index page and base page for el-GR.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <p><a href = "#">Company</a></p>
                 <p><a href = "#">About us</a></p>
                 <p><a href = "#">R.W. Emerson Project</a></p>
-                <p><a href = "#">Privacy Policy</a></p>
+                <p><a href = "/en-GB/privacy_policy.html">Privacy Policy</a></p>
                 <p><a href = "#">Terms of Service</a></p>
                             
             </div>
