links on el-GR home and how_it_works pages updated; how_it_works page accessible.

--- a/el-GR/how_it_works.html
+++ b/el-GR/how_it_works.html
@@ -47,7 +47,7 @@
                             <ul class = "dropdown-menu">
                                
                                 <li><a href = "#"> Οι Υπηρεσίες μας</a></li>
-                                <li><a href = "#"> Πως Λειτουργεί</a></li>
+                                <li class="active"><a href = "how_it_works.html"> Πως Λειτουργεί</a></li>
                                 <li><a href = "#"> Μαθήματα από Απόσταση</a></li>
                                 <li><a href = "#"> Εφαρμογές Google</a></li>
                                 <li><a href = "#"> Moodle</a></li>
@@ -298,7 +298,7 @@
                                 
                 <h4>Ξεκινήστε Μαθήματα</h4>
                 <p><a href = "#">Οι Υπηρεσίες μας</a></p>
-                <p><a href = "#">Πως Λειτουργεί</a></p>
+                <p><a href = "how_it_works.html">Πως Λειτουργεί</a></p>
                 <p><a href = "#">Μαθήματα από Απόσταση</a></p>
                 <p><a href = "#">Εφαρμογές Google</a></p>
                 <p><a href = "#">Moodle</a></p>
