--- a/el-GR/home.html
+++ b/el-GR/home.html
@@ -48,7 +48,7 @@
                             <ul class = "dropdown-menu">
                                
                                 <li><a href = "#"> Οι Υπηρεσίες μας</a></li>
-                                <li><a href = "#"> Πως Λειτουργεί</a></li>
+                                <li><a href = "how_it_works.html"> Πως Λειτουργεί</a></li>
                                 <li><a href = "#"> Μαθήματα από Απόσταση</a></li>
                                 <li><a href = "#"> Εφαρμογές Google</a></li>
                                 <li><a href = "#"> Moodle</a></li>
@@ -274,7 +274,7 @@
                                 
                 <h4>Ξεκινήστε Μαθήματα</h4>
                 <p><a href = "#">Οι Υπηρεσίες μας</a></p>
-                <p><a href = "#">Πως Λειτουργεί</a></p>
+                <p><a href = "how_it_works.html">Πως Λειτουργεί</a></p>
                 <p><a href = "#">Μαθήματα από Απόσταση</a></p>
                 <p><a href = "#">Εφαρμογές Google</a></p>
                 <p><a href = "#">Moodle</a></p>
