Links established for how_it_works page; also distance_learning page links updated. Ready for deployment

--- a/el-GR/distance_learning.html
+++ b/el-GR/distance_learning.html
@@ -48,7 +48,7 @@
                                
                                 <li><a href = "#"> Οι Υπηρεσίες μας</a></li>
                                 <li><a href = "how_it_works.html"> Πως Λειτουργεί</a></li>
-                                <li class="active"><a href = "#"> Μαθήματα από Απόσταση</a></li>
+                                <li class="active"><a href = "distance_learning.html"> Μαθήματα από Απόσταση</a></li>
                                 <li><a href = "#"> Εφαρμογές Google</a></li>
                                 <li><a href = "#"> Moodle</a></li>
                                 <li><a href = "contact_us.html"> Επικοινωνήστε Μαζί μας</a></li>
@@ -340,7 +340,7 @@
                 <h4>Ξεκινήστε Μαθήματα</h4>
                 <p><a href = "#">Οι Υπηρεσίες μας</a></p>
                 <p><a href = "how_it_works.html">Πως Λειτουργεί</a></p>
-                <p><a href = "#">Μαθήματα από Απόσταση</a></p>
+                <p><a href = "distance_learning.html">Μαθήματα από Απόσταση</a></p>
                 <p><a href = "#">Εφαρμογές Google</a></p>
                 <p><a href = "#">Moodle</a></p>
                 <p><a href = "contact_us.html">Επικοινωνήστε Μαζί μας</a></p>
