--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <li><a href = "#"> Distance Learning</a></li>
                                 <li><a href = "#"> Google Apps</a></li>
                                 <li><a href = "#"> Moodle</a></li>
-                                <li><a href = "#"> Contact us</a></li>
+                                <li><a href = "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__tgw_-BUQjVaVldBQUtIVzRSNVNJQjhNWEYxSkdVVy4u"> Contact us</a></li>
                             
                             </ul>
                     
